--- a/SearchAndSelect/angular-searchAndSelect.css
+++ b/SearchAndSelect/angular-searchAndSelect.css
@@ -42,7 +42,7 @@ small {
     margin: 0;
     padding: 0;
     display: none;
-    z-index: 9999;
+    z-index: 99999;
 }
 
 .searchandselect.active .search {
@@ -52,6 +52,7 @@ small {
 .searchandselect.active .dropdown {
     display: inherit;
     max-height: 290px;
+    background-color:white;
 }
 
 .searchandselect .dropdown li {
