--- a/SearchAndSelect/angular-searchAndSelect.css
+++ b/SearchAndSelect/angular-searchAndSelect.css
@@ -19,7 +19,7 @@ small {
     z-index: 1;
 }
 
-.searchandselect .header {
+.searchandselect .header-search-and-select {
     height: 40px;
     padding: 10px 15px;
     z-index: 1;
